# pdoom

./: .clang-format  Cargo.toml  build.rs
image/: Cargo.toml
image/src/: lib.rs
kernel/: Cargo.toml  build.rs
kernel/cc/: CMakeLists.txt  f16.h  gl.hxx  main.c  main.cxx  matrix.h  model.h  rand.h  types.h  vec.h
kernel/cc/DOOM/: d_main.c  doomtype.h  i_system.c  m_fixed.h  m_misc.c  r_main.c  r_things.c
kernel/src/: alloc.rs  doom.rs  libc.rs  main.rs  model.rs
src/: main.rs
