[workspace]
members = [ "image","kernel"]

[package]
name = "os"
version = "0.1.0"
edition = "2021"

[dependencies]
ovmf-prebuilt = "0.1.0-alpha"

[build-dependencies]
bootloader = "0.11"
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }

[profile.release]
strip = "debuginfo"

[profile.release.build-override]
inherits = "release"
